<resources>
    <string name="app_name">Students Job App</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_nick_name">Nick name</string>
    <string name="hint_phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_birth">Date of birth</string>
    <string name="btn_link_to_register">Not registered yet. register now</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="btn_link_to_login">Already registered. login</string>
    <string name="study_details">Study details</string>
    <string name="hint_place_of_study">Place of study</string>
    <string name="hint_type_of_study">Type of study</string>
    <string name="hint_start_of_study">Study start date</string>
    <string name="hint_end_of_study">Study end date</string>
    <string name="student">Student</string>
    <string name="advertiser">Advertiser</string>
    <string name="btn_link_to_register_advertiser">Or  register as a advertiser</string>
    <string name="hint_company_name">Company name</string>
    <string name="hint_location">Location</string>
    <string name="hint_prof_field">Proffessional Field</string>
    <string name="hint_years_of_incorp">Years of incorporation</string>
    <string name="btn_link_to_register_student">Or  register as a student</string>
    <string name="upload_cv">Upload CV</string>
    <string name="search_job">Search for a job</string>
    <string name="apply">Apply</string>
    <string name="job_name">Job name</string>
    <string name="job_location">Job location</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="jobs_list">Jobs List</string>
    <string name="jobs_requests">Jobs Requests</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="details">Details</string>
    <string name="reuired_skilld">Required Skills</string>

    <string name="status_rejected">Rejected</string>
    <string name="status_processing">Processing</string>
    <string name="status_accepted">Accepted</string>
    <string name="Update">Update</string>
    <string name="add_courses">Add courses</string>
    <string name="add_interests">Add interests</string>
    <string name="hint_institution">Institution</string>
    <string name="hint_course_name">Course name</string>
    <string name="ongoing">Ongoing</string>
    <string name="Courses">Courses</string>
    <string name="to">To</string>
    <string name="interests">Interests</string>
    <string name="show_cv">Show cv</string>
    <string name="update_profile">Update profile</string>
    <string name="confirmation_dialog">Confirm Application</string>
    <string name="are_you_sure_you_application">Are you sure you want to apply for this job ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="student_name">Student name</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="hint_company_description">Company Description</string>
    <string name="hint_professional_fields">"Professional Fields "</string>
    <string name="hint_website">Website</string>
    <string name="hint_address">Address</string>
    <string name="company_professional_fields">Professional Fields</string>
    <string name="please_enter_end_study">Please enter end study date</string>
    <string name="missing_fields_message">Please fill all fields</string>
    <string name="please_upload_cv">Please upload cv</string>
    <string name="title_profile">My Profile</string>
    <string name="title_jobs">Jobs List</string>
    <string name="title_job_details">Job Details</string>
    <string name="title_applications">My applications</string>
    <string name="refuse">Refuse</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_add_course">Add course</string>
    <string name="title_choose_interest">Choose Interests</string>
    <string name="add_interest">Add interest</string>
    <string name="add_new_interests">Add New Interests</string>
    <string name="hint_interest">Interest</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">expire date</string>
    <string name="_continue">Continue</string>
    <string name="cvv">CVV</string>
    <string name="hint_code">code</string>
    <string name="enter_code">Enter the code sent to your email</string>
    <string name="verify">Verify</string>
    <string name="verification_error">Code is invalid please enter the correct one</string>
    <string name="course_added">Course added successfully</string>
    <string name="course_added_error">Error adding course</string>
    <string name="posted_jobs_list">Posted Jobs List</string>
    <string name="are_you_sure_you_accept">Are you sre you want to accept this application ?</string>
    <string name="are_you_sure_you_reject">Are you sre you want to reject this application ?</string>
    <string name="student_details">Student Details</string>
    <string name="hint_gender">Gender</string>
    <string name="confirmation_delete">Delete confirmation</string>
    <string name="are_you_sure_you_delete">Are you sure you want to delete this Opportunity?</string>
    <string name="you_have_to_pay">Please pay your payment before continue with us</string>
    <string name="your_Paymnet">Your payment is :</string>
    <string name="add_new_job">Add new job opportunity</string>
    <string name="hint_title">Title</string>
    <string name="post_job">Post Job</string>
    <string name="hint_job_location">Job Location</string>
    <string name="hint_required_skills">Required skills</string>
    <string name="hint_details">Details</string>
    <string name="hint_position">Position</string>
    <string name="post_job_success">Job Oppurtunity Posted successfully</string>
    <string name="post_job_error">Somee error happend</string>
    <string name="get_posted_job_success">Posted Jobs loaded successfully</string>
    <string name="get_requests_success">Requests loaded successfully</string>
    <string name="error_load_data">Error loading data</string>
    <string name="job_delete">Opportunity deleted successfully</string>
    <string name="error_delete">Error deleting item</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="you_have_bill">"You have a bill to pay "</string>
    <string name="apply_job">Applied for job sucessfully</string>
    <string name="add_courses_success">Course added successfully</string>
    <string name="add_interest_success">Interest added successfully</string>
    <string name="hint_description">Description</string>
    <string name="data_loaded">Data loaded successfully</string>
    <string name="job_accept">Job request accepted</string>
    <string name="job_rejected">Job request rejected</string>
    <string name="bookmarked">bookmarked</string>
    <string name="screenshot">screenshot</string>
    <string name="student_cv">Student CV</string>
    <string name="bill_paid">Bill was paid successfully</string>
    <string name="error_pay_bill">Some error happened please try again later</string>
    <string name="bill_amount">Bill amount is :</string>
    <string name="correct_code">Code is correct</string>
    <string name="error_code">code is not correct</string>

</resources>