<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/menu_posted_jobs"
            android:icon="@drawable/ic_job"
            android:title="@string/posted_jobs_list"
            android:actionLayout="@layout/fragment_my_posted_jobs"
            />

        <item
            android:id="@+id/menu_job_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/jobs_requests"
            android:actionLayout="@layout/fragment_job_requests"
            />
        <item
        android:id="@+id/menu_advertiser_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/jobs_list"
        android:actionLayout="@layout/fragment_advertiser_profile"
        />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />


    </group>

</menu>