<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_jobs"
        android:icon="@drawable/ic_job"
        android:title="@string/jobs_list"
        android:actionLayout="@layout/fragment_job_opportunities"
        />
    <item
        android:id="@+id/menu_applications"
        android:icon="@drawable/ic_request"
        android:title="@string/title_applications"
        android:actionLayout="@layout/fragment_job_opportunities"
        />
    <item
        android:id="@+id/menu_student_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/jobs_requests"
        android:actionLayout="@layout/fragment_my_applications"
        />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/jobs_requests"
        android:actionLayout="@layout/fragment_my_applications"
        />

</group>

</menu>
