<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_advertiser"
    app:startDestination="@id/menu_posted_jobs">

    <fragment
        android:id="@+id/menu_posted_jobs"
        android:name="com.example.students_job_app.advertiser.fragments.MyPostedJobsFragment"
        android:label="@string/posted_jobs_list"
        tools:layout="@layout/fragment_my_posted_jobs"
        >

    </fragment>
    <fragment
        android:id="@+id/menu_job_requests"
        android:name="com.example.students_job_app.advertiser.fragments.JobRequestsFragment"
        android:label="@string/jobs_requests"
        tools:layout="@layout/fragment_job_requests"
        >
        <action
            android:id="@+id/action_request_to_studentDetailsFragment"
            app:destination="@id/StudentDetailsFragment"
            app:popUpTo="@id/menu_job_requests" />
    </fragment>
    <fragment
        android:id="@+id/StudentDetailsFragment"
        android:name="com.example.students_job_app.advertiser.fragments.StudentDetailsFragment"
        android:label="@string/student_details"
        tools:layout="@layout/fragment_student_details"
        />
    <fragment
        android:id="@+id/menu_advertiser_profile"
        android:name="com.example.students_job_app.advertiser.fragments.AdvertiserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_advertiser_profile"
        >
        <action
            android:id="@+id/action_profileFragment_to_updateProfileFragment"
            app:destination="@id/UpdateProfileFragment"
            app:popUpTo="@id/menu_advertiser_profile" />
    </fragment>
    <fragment
        android:id="@+id/UpdateProfileFragment"
        android:name="com.example.students_job_app.advertiser.fragments.AdvertiserUpdateProfileFragment"      android:label="@string/jobs_requests"
        tools:layout="@layout/fragment_advertiser_update_profile"
        />
</navigation>