<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".student.fragments.AddCourseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_interests"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input"
            android:hint="@string/hint_interest"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>


        <Button
            android:id="@+id/add_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_login_btn"
            android:text="@string/add_interest"
            android:textColor="@color/black"
            android:textStyle="bold" />



    </LinearLayout>

</FrameLayout>